--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^1.7.5",
 		"dayjs": "^1.11.13",
 		"pinia": "^2.2.2",
+		"vite-plugin-pwa": "^0.21.1",
 		"vue": "^3.5.13",
 		"vue-i18n": "^9.14.0",
 		"vue-router": "^4.2.5"
